# ONScripter-EN

./: CHANGES  DirectReader.cpp  DirectReader.h  Makefile.dsp  Makefile.extlibs  Makefile.onscripter  Makefile.unittest  NsaReader.cpp  ONScripterLabel.cpp  ONScripterLabel.h  ONScripterLabel_effect.cpp  ONScripterLabel_effect.h  ONScripterLabel_effect_breakup.cpp  ONScripterLabel_file.cpp  ONSrect.h  ONSrectAdapter.h  PixelFormat.h  PixelFormatAdapter.h  SarReader.cpp  ScriptHandler.cpp  ScriptParser_command.cpp  configure  graphics_altivec.cpp  graphics_altivec.h  graphics_sse2.cpp  graphics_sse2.h  meson.build  onscripter-en.1  readers.patch  test_io_classes.patch  version.h
.github/workflows/: build.yml
debian/: changelog  control  onscripter-en-tools.install  onscripter-en-tools.manpages  onscripter-en.docs  onscripter-en.install  onscripter-en.manpages  rules
debian/patches/: do-not-strip.patch  install-tools.patch  internal-png-zlib.patch  obey-cxxflags.patch  obey-destdir.patch  oscflags.patch  series
extlib/src/libogg-1.3.5/: configure  configure.ac
extlib/src/patches/SDL/: 0001-configure-darwin-favor-faltivec-over-maltivec.-don-t.patch
extlib/src/zlib-1.2.3/: vpath.patch
test/: Makefile  Makefile-reader_tests.patch  SHA512SUMS  test_DirectReader.cpp  test_DirtyRect.cpp  test_FontInfo.cpp  test_NsaReader.cpp  test_SarReader.cpp  test_ScriptHandler.cpp  test_graphics_altivec.cpp  test_graphics_routines.cpp
tools/: conv_shared.cpp
